cmake_minimum_required(VERSION 2.6)
project(Command_line)
enable_testing()
find_package (Threads)
message(STATUS GTEST_ROOT=$ENV{GTEST_ROOT})
include_directories($ENV{GTEST_ROOT}/include)
link_directories($ENV{GTEST_ROOT}/mybuild)
add_executable(Command_line_test Command_line.cpp Command_line_test.cpp)
target_link_libraries(Command_line_test gtest gtest_main)
target_link_libraries(Command_line_test ${CMAKE_THREAD_LIBS_INIT})
add_test(NAME Command_line_test COMMAND Command_line_test)
