cmake_minimum_required(VERSION 2.6)
project(Command_line)
enable_testing()
find_package (Threads)
message(STATUS GTEST_ROOT=$ENV{GTEST_ROOT})
include_directories($ENV{GTEST_ROOT}/include)
link_directories($ENV{GTEST_ROOT}/mybuild)
add_executable(Command_line_test Command_function.cpp Command_function_test.cpp Command_parse.cpp Command_parse_test.cpp)
add_executable(example main.cpp Command_function.cpp Command_parse.cpp)
target_link_libraries(Command_line_test gtest gtest_main)
target_link_libraries(Command_line_test ${CMAKE_THREAD_LIBS_INIT})
add_test(NAME Command_line_test COMMAND Command_line_test)
